# motion-correction

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  trigger_pr.txt
.github/workflows/: dev.yml  main.yml  release.yml
desktop/: Tutorial.ipynb
desktop/FlimAligner/: flim_aligner.py  utility.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  motion_correction.cudipy.align.rst  motion_correction.cudipy.denoise.rst  motion_correction.cudipy.rst  motion_correction.cudipy.segment.rst  motion_correction.cudipy.sims.rst  motion_correction.cudipy.viz.rst  motion_correction.desktop.rst  motion_correction.image_registration.FITS_tools.rst  motion_correction.image_registration.fft_tools.rst  motion_correction.image_registration.fft_tools.tests.rst  motion_correction.image_registration.rst  motion_correction.image_registration.tests.rst  motion_correction.pyimof.rst  motion_correction.rst  usage.rst
examples/: Tutorial.ipynb
motion_correction/: __init__.py  algorithms.py  motion_correction.py  pqreader.py  pqwriter.py
motion_correction/cudipy/: LICENSE  _utils.py  info.py
motion_correction/cudipy/align/: __init__.py  imwarp.py  (+5 more)
motion_correction/desktop/: flim_aligner.py  utility.py
motion_correction/image_registration/: __init__.py  version.py
motion_correction/pyimof/: __init__.py  display.py  io.py  solvers.py  util.py
tests/: 2_frames.pt3  __init__.py  test_motion_correction.py
(+12 files in other folders)
